--- a/_includes/2016_data/footer.html
+++ b/_includes/2016_data/footer.html
@@ -17,16 +17,8 @@ footer {
   <footer>
         <div class="container">
             <div class="row">
-                <div class="col-md-4">
-                    <span class="copyright">Copyright © 2017 Melvin Ch'ng, All Rights Reserved.</span>
-                </div>
-                <div class="col-md-4">
-                    <ul class="list-inline social-buttons">
-                        {% for network in site.social %}
-                        <li><a href="{{ network.url }}"><i class="fa fa-{{ network.title }}"></i></a>
-                        </li>
-                        {% endfor %}
-                    </ul>
+                <div class="col-md-12">
+                    <span class="copyright">Copyright © 2018 Pavel Komarov, All Rights Reserved.</span>
                 </div>
             </div>
         </div>
