Added stackoverflow button and a little real text

--- a/_layouts/2017_home.html
+++ b/_layouts/2017_home.html
@@ -12,10 +12,9 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-heading">Title<br></div>
-                <div class="intro-lead-in">Date</div>
-                <div class="intro-lead-in">Location</div>
-                <a href="#intro" class="page-scroll btn btn-xl">Tell Me More</a>
+                <div class="intro-heading">Hi, I'm Pavel<br></div>
+                <div class="intro-lead-in">Electrical and Software Engineer</div>
+                <div class="intro-lead-in">Trying to build a website (At least the social links work.)</div>
             </div>
         </div>
     </header>
