--- a/_layouts/2016_style.css
+++ b/_layouts/2016_style.css
@@ -1,3 +1,3 @@
-{% include 2016_css/bootstrap.min.css %}
-{% include 2016_css/agency.css %}
+{% include bootstrap.min.css %}
+{% include agency.css %}
 {{ content }}
