--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,12 +9,12 @@
     {{ criticalcss | scssify }}
   </style>
   
-  {% include /2017_data/js.html %}
-  {% include /2017_data/head.html %}
+  {% include /js.html %}
+  {% include /head.html %}
 
   <body>
-    {% include /2017_data/header.html %}
+    {% include /header.html %}
         {{ content }}
   </body>
-  {% include /2017_data/footer.html %}
+  {% include /footer.html %}
 </html>
