--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 
-  {% include 2017_data/head.html %}
+  {% include head.html %}
 
 
     <body id="page-top" class="index">
 
-    {% include 2017_data/header-home.html %}
+    {% include header-home.html %}
 
     <!-- Header -->
     <header>
@@ -19,13 +19,13 @@
         </div>
     </header>
 
-    {% include 2017_data/intro.html %}
-    {% include 2017_data/speakers.html %}
-    {% include 2017_data/about.html %}
-    {% include 2017_data/contact.html %}
-    {% include 2017_data/footer.html %}
-    {% include 2017_data/speakers_info.html %}
-    {% include 2017_data/js.html %}
+    {% include intro.html %}
+    {% include speakers.html %}
+    {% include about.html %}
+    {% include contact.html %}
+    {% include footer.html %}
+    {% include speakers_info.html %}
+    {% include js.html %}
 
     </body>
 </html>
