--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,17 +12,17 @@
             <div class="intro-text">
                 <div class="intro-heading">Hi, I'm Pavel<br></div>
                 <div class="intro-lead-in">Electrical and Software Engineer</div>
-                <div class="intro-lead-in">Trying to build a website (At least the social links work.)</div>
+                <div class="intro-lead-in">Trying to build a website</div>
             </div>
         </div>
     </header>
 
-    {% include intro.html %}
-    {% include speakers.html %}
     {% include about.html %}
+    {% include speakers.html %}
+    {% include popup.html %}
+    <!-- include intro.html This is a fun video section.-->
     {% include contact.html %}
     {% include footer.html %}
-    {% include speakers_info.html %}
     {% include js.html %}
 
     </body>
