--- a/_includes/header-home.html
+++ b/_includes/header-home.html
@@ -25,10 +25,10 @@
                     <a href="/"></a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#speakers">Speakers</a>
+                    <a class="page-scroll" href="#about">About</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#about">About</a>
+                    <a class="page-scroll" href="#writing">Writing</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="#contact">Contact</a>
