--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,7 +4,7 @@
 
     <body id="page-top" class="index">
 
-    {% include header-home.html %}
+    {% include header.html %}
 
     <!-- Header -->
     <header>
@@ -18,7 +18,8 @@
     </header>
 
     {% include about.html %}
-    {% include speakers.html %}
+    {% include projects.html %}
+    {% include writing.html %}
     {% include popup.html %}
     <!-- include intro.html This is a fun video section.-->
     {% include contact.html %}
