--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,3 +1,5 @@
+<!-- Holds all the stuff that goes in the head tag, the stuff that defines character sets, stylesheets,
+and all that other jazz. Doesn't appear on the page; very different from the header. -->
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
