removed secondary heading on main page

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,14 +1,21 @@
 <!-- Brief About Section -->
 <section id="about">
 	<div class="container">
-        <div class="row">
-            <div class="col-lg-12 text-center">
-                <h2 class="section-heading">About</h2>
-                <h3 class="section-subheading text-muted"></h3>
-            </div>
-        </div>
+		<div class="row">
+			<div class="col-lg-12 text-center">
+				<h2 class="section-heading">About</h2>
+			</div>
+		</div>
 
-		This is a blurb about me. I haven't decided exactly what to say yet. Click the links in the header to see my resume and such.
+	  	<div class="text-muted">
+		<p>Thanks for visiting, and welcome.</p>
+
+		<p>This site presents some of who I am through projects I've done, jobs I've worked, and things I've written.</p>
+
+		<p>My aspirations are evolving, but I am deeply interested in Math, Computer Science, that intersection of the two called Machine Learning, Finance, developments in Tissue Engineering, ponderings like Man's Search for Meaning, and pragmatic tips on how to live a fuller life.</p>
+
+		<p>I'm always open to hearing about opportunities that fit my skill set, so if the below makes you curious, reach out. You will find links to my email, resume, github, etc. in the header.</p>
+		</div>
 
 	</div>
 </section>
