--- a/_includes/writing.html
+++ b/_includes/writing.html
@@ -1,29 +1,28 @@
 <!-- Portfolio Grid Section -->
-<section id="writing" class="bg-light-gray">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 text-center">
-                <h2 class="section-heading">Writing</h2>
-                <h3 class="section-subheading text-muted"></h3>
-            </div>
-        </div>
-        <div class="row">
-        {% for post in site.categories.projects %}
-            <div class="col-md-4 col-sm-6 writing-item">
-                <a href="#{{ post.name }}" class="writing-link" data-toggle="modal">
-                    <div class="writing-hover">
-                        <div class="writing-hover-content">
-                            <i class="fa fa-plus fa-3x"></i>
-                        </div>
-                    </div>
-                    <img src="../theme/img/{{ post.thumbnail }}" class="img-responsive img-centered" alt="">
-                </a>
-                <div class="writing-caption">
-                    <h4>{{ post.title }}</h4>
-                    <p class="text-muted">{{ post.subtitle }}</p>
-                </div>
-            </div>
-        {% endfor %}
-        </div>
-    </div>
+<section id="writing">
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-12 text-center">
+				<h2 class="section-heading">Writing</h2>
+			</div>
+		</div>
+		<div class="row">
+		{% for post in site.categories.writing %}
+			<div class="col-md-4 col-sm-6 writing-item">
+				<a href="#{{ post.name }}" class="writing-link" data-toggle="modal">
+					<div class="writing-hover">
+						<div class="writing-hover-content">
+							<i class="fa fa-plus fa-3x"></i>
+						</div>
+					</div>
+					<img src="../assets/{{ post.thumbnail }}" class="img-responsive img-centered" alt="">
+				</a>
+				<div class="writing-caption">
+					<h4>{{ post.title }}</h4>
+					<p class="text-muted">{{ post.subtitle }}</p>
+				</div>
+			</div>
+		{% endfor %}
+		</div>
+	</div>
 </section>
