--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,20 +1,17 @@
 <!DOCTYPE html>
 <html>
-  {% include head.html %}
+    {% include head.html %}
 
 	<body id="page-top" class="index">
 
 	{% include header.html %}
 
-	<!-- Header -->
-	<header>
+	<section class="welcome" id="welcome">
 		<div class="container">
-			<div class="intro-text">
-				<div class="intro-heading">Hi, I'm Pavel<br></div>
-				<div class="intro-lead-in">Electrical and Software Engineer</div>
-			</div>
+			<div class="intro-heading">Hi, I'm Pavel<br></div>
+			<div class="intro-lead-in">Electrical and Software Engineer</div>
 		</div>
-	</header>
+	</section>
 
 	{% include about.html %}
 	{% include projects.html %}
