--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,9 +21,7 @@
 		<!-- Collect the nav links, forms, and other content for toggling -->
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav navbar-right">
-				<li class="hidden">
-					<a href="/"></a>
-				</li>
+				<li class="hidden"><a href="#welcome"></a></li>
 				<li><a class="page-scroll" href="#about">About</a></li>
 				<li><a class="page-scroll" href="#projects">Projects</a></li>
 				<li><a class="page-scroll" href="#writing">Writing</a></li>
