--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,12 +3,6 @@
 	<div class="container">
 		<!-- Brand and toggle get grouped for better mobile display -->
 		<div class="navbar-header page-scroll">
-			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-				<span class="sr-only">Toggle navigation</span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-			</button>
 			<div class="col-md-12">
 				<ul class="list-inline social-buttons">
 					{% for link in site.social %}
@@ -16,10 +10,17 @@
 					{% endfor %}
 				</ul>
 			</div>
+
+			<button class="navbar-toggle" data-toggle="collapse" data-target="#menu">
+				<span class="sr-only">Toggle navigation</span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			</button>
 		</div>
 
 		<!-- Collect the nav links, forms, and other content for toggling -->
-		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+		<div class="collapse navbar-collapse" id="menu">
 			<ul class="nav navbar-nav navbar-right">
 				<li class="hidden"><a href="#welcome"></a></li>
 				<li><a class="page-scroll" href="#about">About</a></li>
