--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,23 +1,21 @@
 <!-- Navigation -->
-<nav class="navbar navbar-default navbar-default-color navbar-fixed-top">
+<nav class="navbar navbar-expand-md fixed-top bg-222">
 	<div class="container">
 		<!-- Brand and toggle get grouped for better mobile display -->
-		<div class="navbar-header page-scroll">
-			<div class="col-md-12">
-				<ul class="list-inline social-buttons">
-					{% for link in site.social %}
-					<li><a href="{{ link.url }}"><i class="{{ link.icon }}"></i></a></li>
-					{% endfor %}
-				</ul>
-			</div>
+		<ul class="list-inline social-buttons">
+			{% for link in site.social %}
+			<li class="list-inline-item">
+				<a href="{{ link.url }}"><i class="{{ link.icon }}"></i></a>
+			</li>
+			{% endfor %}
+		</ul>
 
-			<button class="navbar-toggle" data-toggle="collapse" data-target="#menu">
-				<span class="sr-only">Toggle navigation</span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-			</button>
-		</div>
+		<button class="navbar-toggle" data-toggle="collapse" data-target="#menu">
+			<span class="sr-only">Toggle navigation</span>
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+		</button>
 
 		<!-- Collect the nav links, forms, and other content for toggling -->
 		<div class="collapse navbar-collapse" id="menu">
@@ -29,9 +27,7 @@
 				<li><a class="page-scroll" href="#contact">Contact</a></li>
 			</ul>
 		</div>
-		<!-- /.navbar-collapse -->
 	</div>
-	<!-- /.container-fluid -->
 </nav>
 
 <!--
