--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -12,7 +12,7 @@
 				<ul class="timeline">
 					<li>
 						<div class="timeline-image">
-							<img class="img-circle img-responsive" src="../theme/img/icon-about.png" alt="">
+							<img class="rounded-circle img-fluid" src="../theme/img/icon-about.png" alt="">
 						</div>
 						<div class="timeline-panel">
 							<div class="timeline-heading">
@@ -26,7 +26,7 @@
 					</li>
 					<li class="timeline-inverted">
 						<div class="timeline-image">
-							<img class="img-circle img-responsive" src="../theme/img/icon-agenda.png" alt="">
+							<img class="rounded-circle img-fluid" src="../theme/img/icon-agenda.png" alt="">
 						</div>
 						<div class="timeline-panel">
 							<div class="timeline-heading">
@@ -40,7 +40,7 @@
 					</li>
 					<li class="timeline-inverted">
 						<div class="timeline-image">
-							<img class="img-circle img-responsive" src="../theme/img/icon-venue.png" alt="">
+							<img class="rounded-circle img-fluid" src="../theme/img/icon-venue.png" alt="">
 						</div>
 						<div class="timeline-panel">
 							<div class="timeline-heading">
@@ -54,7 +54,7 @@
 					</li>
 					<li>
 						<div class="timeline-image">
-							<img class="img-circle img-responsive" src="../theme/img/icon-faq.png" alt="">
+							<img class="rounded-circle img-fluid" src="../theme/img/icon-faq.png" alt="">
 						</div>
 						<div class="timeline-panel">
 							<div class="timeline-heading">
@@ -68,7 +68,7 @@
 					</li>
 					<li class="timeline-inverted">
 						<div class="timeline-image">
-							<img class="img-circle img-responsive" src="../theme/img/booklet-icon.png" alt="">
+							<img class="rounded-circle img-fluid" src="../theme/img/booklet-icon.png" alt="">
 						</div>
 						<div class="timeline-panel">
 							<div class="timeline-heading">
