--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,11 +10,8 @@
 			{% endfor %}
 		</ul>
 
-		<button class="navbar-toggle" data-toggle="collapse" data-target="#menu">
-			<span class="sr-only">Toggle navigation</span>
-			<span class="icon-bar"></span>
-			<span class="icon-bar"></span>
-			<span class="icon-bar"></span>
+		<button class="navbar-toggler" data-toggle="collapse" data-target="#menu">
+			&#9776;<!-- three bars symbol -->
 		</button>
 
 		<!-- Collect the nav links, forms, and other content for toggling -->
