--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,18 +10,18 @@
 			{% endfor %}
 		</ul>
 
-		<button class="navbar-toggler" data-toggle="collapse" data-target="#menu">
+		<div class="navbar-toggler" data-toggle="collapse" data-target="#menu">
 			&#9776;<!-- three bars symbol -->
-		</button>
+		</div>
 
 		<!-- Collect the nav links, forms, and other content for toggling -->
 		<div class="collapse navbar-collapse" id="menu">
-			<ul class="nav navbar-nav navbar-right">
-				<li class="hidden"><a href="#welcome"></a></li>
-				<li><a class="page-scroll" href="#about">About</a></li>
-				<li><a class="page-scroll" href="#projects">Projects</a></li>
-				<li><a class="page-scroll" href="#writing">Writing</a></li>
-				<li><a class="page-scroll" href="#contact">Contact</a></li>
+			<ul class="nav navbar-nav ml-auto">
+				<a class="nav-link" href="#welcome"></a>
+				<a class="nav-link page-scroll" href="#about">About</a>
+				<a class="nav-link page-scroll" href="#projects">Projects</a>
+				<a class="nav-link page-scroll" href="#writing">Writing</a>
+				<a class="nav-link page-scroll" href="#contact">Contact</a>
 			</ul>
 		</div>
 	</div>
