--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,8 +16,7 @@
 
 		<!-- Collect the nav links, forms, and other content for toggling -->
 		<div class="collapse navbar-collapse" id="menu">
-			<ul class="nav navbar-nav ml-auto">
-				<a class="nav-link" href="#welcome"></a>
+			<ul class="nav ml-auto">
 				<a class="nav-link page-scroll" href="#about">About</a>
 				<a class="nav-link page-scroll" href="#projects">Projects</a>
 				<a class="nav-link page-scroll" href="#writing">Writing</a>
