removed unnecessary bg-222 class; updated social buttons to have no bottom margin, shrinking and centering navbar vertically

--- a/_includes/agency.css
+++ b/_includes/agency.css
@@ -44,10 +44,6 @@ body {
 	background-color: #f7f7f7;
 }
 
-.bg-222 {
-	background-color: rgba(34, 34, 34, 0);
-}
-
 .text-muted {
 	color: #{{ site.data.template.color.muted }};
 }
@@ -605,6 +601,8 @@ footer ul.quicklinks {
 
 .social-buttons {
 	float: left;
+	margin-top: 0px;
+	margin-bottom: 0px;
 }
 
 ul.social-buttons li a {
