--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <!-- Navigation -->
-<nav class="navbar navbar-expand-md fixed-top bg-222">
+<nav class="navbar navbar-expand-md fixed-top">
 	<div class="container">
 		<!-- Brand and toggle get grouped for better mobile display -->
 		<ul class="list-inline social-buttons">
