--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
-<!-- Navigation -->
-<nav class="navbar navbar-expand-md fixed-top">
+<!-- Navigation: expand-[sm, md, lg] controls the width where the menu collapses. -->
+<nav class="navbar navbar-expand-lg fixed-top">
 	<div class="container">
 		<!-- Brand and toggle get grouped for better mobile display -->
 		<ul class="list-inline social-buttons">
