found a way to right-justify stuff in the collapsed navbar

--- a/_includes/agency.css
+++ b/_includes/agency.css
@@ -161,6 +161,14 @@ h6 {
 	color: #fff;
 }
 
+@media(max-width: 768px) {
+	.page-scroll {
+		padding-right: 0px;
+		margin-left: 10px;
+		font-size: 12px;
+	}
+}
+
 .welcome {
 	height: 100vh; /* This section is adaptively exactly one screenheight tall. Pretty slick. */
 	text-align: center;
