--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,7 @@
 
 		<!-- Collect the nav links, forms, and other content for toggling -->
 		<div class="collapse navbar-collapse" id="menu">
-			<ul class="nav ml-auto">
+			<ul class="nav ml-auto justify-content-end">
 				<a class="nav-link page-scroll" href="#about">About</a>
 				<a class="nav-link page-scroll" href="#projects">Projects</a>
 				<a class="nav-link page-scroll" href="#writing">Writing</a>
