deleted scss files that I appear not to want and removed dependency in config; removed extra style.css in layouts by putting liquid tags in the one in theme folder; deleted critical.scss and removed dependency, because that's some advanced stuff I don't need or care about right now

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,13 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-  <style type="text/css">
-	/*INCLUDE MAIN CSS FILE*/
-	{% capture criticalcss %}
-	  {% include /critical.scss %}
-	{% endcapture %}
-	{{ criticalcss | scssify }}
-  </style>
+  <style type="text/css"></style>
   
   {% include /js.html %}
   {% include /head.html %}
